--- a/app/src/main/res/layout/activity_guess_number.xml
+++ b/app/src/main/res/layout/activity_guess_number.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
 
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background_game"
-    tools:context="com.example.polokhachsergey.game.MainActivity">
+    tools:context="com.example.polokhachsergey.game.guessNumberActivity">
 
     <TableLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="50dp">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:id="@+id/tableLayout">
 
         <TableRow
             android:layout_width="match_parent"
@@ -160,29 +163,23 @@
         </TableRow>
     </TableLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:text="@string/text2"
+        android:textColor="@color/Aqua"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:text="@string/text2"
-            android:textColor="@color/Aqua"/>
+    <ImageView
+        android:layout_width="@dimen/icon_width"
+        android:layout_height="@dimen/icon_height"
+        android:id="@+id/imageView"
+        android:layout_above="@+id/tableLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="61dp" />
 
-        <ImageView
-            android:layout_width="195dp"
-            android:layout_height="@dimen/icon_height_h"
-            android:id="@+id/imageView"
-            android:layout_weight="1.08"
-            android:layout_marginBottom="61dp"
-            android:layout_marginLeft="50dp" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
