--- a/app/src/main/res/layout-land/activity_first.xml
+++ b/app/src/main/res/layout-land/activity_first.xml
@@ -11,28 +11,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background_start"
-    tools:context="com.example.polokhachsergey.game.StartActivity">
+    tools:context="com.example.polokhachsergey.game.guessNumberStartActivity">
 
 
     <Button
         android:id="@+id/buttonNext"
-        android:text="@string/textNext"
-        android:layout_width="wrap_content"
+        android:text="@string/gameName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/textStart"
-        android:text="@string/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:textColor="@color/White"
-        android:textAlignment="center"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
