--- a/app/src/main/res/anim/mycombo_trans_scale.xml
+++ b/app/src/main/res/anim/mycombo_trans_scale.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <rotate
-        android:fromDegrees="0"
-        android:toDegrees="360"
-        android:pivotY="50%"
-        android:pivotX="50%"
-        android:duration="3000">
-    </rotate>
+
     <scale
         android:fromXScale="0.1"
         android:toXScale="1.0"
@@ -17,5 +11,12 @@
         android:pivotY="50%"
         android:duration="3000">
     </scale>
+    <translate
+        android:fromXDelta="-150"
+        android:toXDelta="0"
+        android:fromYDelta="-200"
+        android:toYDelta="0"
+        android:duration="2000">
+    </translate>
 
 </set>
