--- a/app/src/main/res/anim/myrotate.xml
+++ b/app/src/main/res/anim/myrotate.xml
@@ -2,6 +2,7 @@
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromDegrees="0"
     android:toDegrees="360"
+    android:pivotY="30%"
+    android:pivotX="30%"
     android:duration="3000">
-
 </rotate>
