--- a/app/src/main/res/layout-land/activity_guess_number.xml
+++ b/app/src/main/res/layout-land/activity_guess_number.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
 
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_guess_number"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background_game"
+    android:background="@drawable/background_screen_1"
+
     tools:context="com.example.polokhachsergey.game.guessNumberActivity">
 
     <TableLayout
@@ -162,18 +163,20 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="22dp"
             android:layout_weight="1"
-            android:text="@string/text2"
-            android:textColor="@color/Aqua"/>
+            android:text="@string/text2" />
 
         <ImageView
             android:layout_width="195dp"
@@ -185,4 +188,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
