--- a/app/src/main/res/layout/activity_guess_number.xml
+++ b/app/src/main/res/layout/activity_guess_number.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
 
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_guess_number"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background_game"
+    android:background="@drawable/background_screen_1"
     tools:context="com.example.polokhachsergey.game.guessNumberActivity">
 
     <TableLayout
@@ -168,9 +168,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="22dp"
         android:text="@string/text2"
-        android:textColor="@color/Aqua"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
