--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,20 +4,27 @@
     tools:context="com.example.polokhachsergey.p013_androidcontextmenu.MainActivity">
 
     <item
+        android:id="@+id/settings"
+        android:orderInCategory="101"
+        android:title="@string/menuSettings"
+        android:checkable="false"
+        android:icon="@android:drawable/ic_menu_manage"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/helpText"
         android:orderInCategory="100"
         android:title="@string/menuDescription"
-
-        android:checkable="false"
-        app:showAsAction="never|ifRoom"
-        android:icon="@android:drawable/ic_dialog_info" />
+        app:showAsAction="ifRoom"
+        android:icon="@android:drawable/ic_dialog_info"
+        android:checkable="false" />
 
     <item
         android:id="@+id/helpStatisticAll"
         android:orderInCategory="100"
         android:title="@string/menuStatisticAll"
-        android:checkable="false"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:checkable="false" />
 
     <item
         android:id="@+id/helpStatistic"
