--- a/app/src/main/res/layout-land/activity_guess_number.xml
+++ b/app/src/main/res/layout-land/activity_guess_number.xml
@@ -6,186 +6,216 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background_screen_1"
+    tools:context="polokhachsergey.game.GuessNumberActivity">
 
-    tools:context="com.example.polokhachsergey.game.guessNumberActivity">
-
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="50dp">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:text="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textColor="@color/DarkRed"
-                android:id="@+id/button1"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-
-            <Button
-                android:text="2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/DarkBlue"
-                android:id="@+id/button2"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-
-            <Button
-                android:text="3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textColor="@color/DarkRed"
-                android:id="@+id/button3"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:text="4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/DarkBlue"
-                android:id="@+id/button4"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-
-            <Button
-                android:text="5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textColor="@color/DarkRed"
-                android:id="@+id/button5"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-
-            <Button
-                android:text="6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/DarkBlue"
-                android:id="@+id/button6"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:text="7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textColor="@color/DarkRed"
-                android:id="@+id/button7"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-
-            <Button
-                android:text="8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/DarkBlue"
-                android:id="@+id/button8"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-
-            <Button
-                android:text="9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textColor="@color/DarkRed"
-                android:id="@+id/button9"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:text="Start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/Gold"
-                android:id="@+id/buttonStart"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button.Toggle" />
-
-            <Button
-                android:text="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textColor="@color/DarkBlue"
-                android:id="@+id/button0"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button" />
-
-            <Button
-                android:text="I give up"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/Chocolate"
-                android:id="@+id/buttonEnd"
-                android:textStyle="bold"
-                style="@android:style/Widget.Button.Toggle" />
-        </TableRow>
-    </TableLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:alpha="1"
+        android:scaleType="centerCrop"
+        android:src="?attr/Background"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_centerHorizontal="true"
+        tools:ignore="ContentDescription"
+        android:layout_alignParentTop="true" />
 
-        <TextView
-            android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingStart="10dp"
+        android:paddingBottom="10dp">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@+id/tableLayout3"
+            android:layout_toEndOf="@+id/tableLayout3">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvGuessNumberActivity"
+                android:textAlignment="center"
+                android:textSize="26sp"
+                android:text="@string/text2"/>
+
+            <ImageView
+                android:id="@+id/ivGuessNumberActivity"
+                android:layout_weight="1"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginStart="0dp"
+                android:layout_width="110dp"
+                android:layout_height="0dp"
+                android:layout_gravity="center" />
+
+        </LinearLayout>
+
+        <TableLayout
+            android:id="@+id/tableLayout3"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textAlignment="center"
-            android:textSize="22dp"
-            android:layout_weight="1"
-            android:text="@string/text2" />
+            android:orientation="horizontal"
+            android:layout_marginTop="35dp">
 
-        <ImageView
-            android:layout_width="195dp"
-            android:layout_height="@dimen/icon_height_h"
-            android:id="@+id/imageView"
-            android:layout_weight="1.08"
-            android:layout_marginBottom="61dp"
-            android:layout_marginLeft="50dp" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
 
-    </LinearLayout>
+                <Button
+                    android:text="@string/_1"
+                    android:id="@+id/btn_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/NEB_weight"
+                    android:textColor="?attr/NEB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
 
+                <Button
+                    android:text="@string/_2"
+                    android:id="@+id/btn_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/EB_weight"
+                    android:textColor="?attr/EB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:text="@string/_3"
+                    android:id="@+id/btn_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/NEB_weight"
+                    android:textColor="?attr/NEB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <Button
+                    android:text="@string/_4"
+                    android:id="@+id/btn_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/EB_weight"
+                    android:textColor="?attr/EB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:text="@string/_5"
+                    android:id="@+id/btn_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/NEB_weight"
+                    android:textColor="?attr/NEB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:text="@string/_6"
+                    android:id="@+id/btn_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/EB_weight"
+                    android:textColor="?attr/EB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <Button
+                    android:text="@string/_7"
+                    android:id="@+id/btn_7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/NEB_weight"
+                    android:textColor="?attr/NEB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:text="@string/_8"
+                    android:id="@+id/btn_8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/EB_weight"
+                    android:textColor="?attr/EB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:text="@string/_9"
+                    android:id="@+id/btn_9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/NEB_weight"
+                    android:textColor="?attr/NEB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <Button
+                    android:text="@string/start"
+                    android:id="@+id/btn_Start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/CB_weight"
+                    android:textColor="?attr/CB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:text="@string/_0"
+                    android:id="@+id/btn_0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/EB_weight"
+                    android:textColor="?attr/EB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:text="@string/i_give_up"
+                    android:id="@+id/btn_GiveUp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="?attr/CB_weight"
+                    android:textColor="?attr/CB_textColor"
+                    android:textSize="22sp"
+                    style="?attr/Style"
+                    android:textStyle="bold"
+                    android:paddingBottom="10dp" />
+            </TableRow>
+        </TableLayout>
+    </RelativeLayout>
 </RelativeLayout>
