--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:id="@+id/activity_settings"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal">
+
+        <ImageView
+            android:alpha="1"
+            android:scaleType="centerCrop"
+            android:src="?attr/Background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <ExpandableListView
-            android:id="@+id/elvMain"
+            android:id="@+id/elvSettingsActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </ExpandableListView>
-</LinearLayout>
+</RelativeLayout>
