--- a/app/src/main/res/layout-land/my_item_image.xml
+++ b/app/src/main/res/layout-land/my_item_image.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <TextView
-        android:id="@+id/ivText"
-        android:layout_width="match_parent"
+    android:orientation="vertical">
+    <ImageView
+        android:id="@+id/ivMyItemImage"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:textSize="25dp">
-    </TextView>
+        android:layout_width="wrap_content">
+    </ImageView>
 </LinearLayout>
