--- a/app/src/main/res/layout/my_item_image.xml
+++ b/app/src/main/res/layout/my_item_image.xml
@@ -3,10 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
     <ImageView
-        android:id="@+id/myItemImageView"
-        android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:id="@+id/ivMyItemImage"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     </ImageView>
 </LinearLayout>
